--- a/index.Rmd
+++ b/index.Rmd
@@ -196,6 +196,7 @@ library(forcats)
 library(Kendall)
 library(patchwork)
 library(DT)
+library(OCSdata)
 ```
 
 <u>**Packages used in this case study:** </u>
@@ -220,6 +221,7 @@ library(DT)
 [kendall](https://cran.r-project.org/web/packages/Kendall/Kendall.pdf) | to implement the Mann-Kendall trend test in R   
 [patchwork](https://github.com/thomasp85/patchwork) | to combine plots
 [DT](https://cran.r-project.org/web/packages/DT/index.html) | Interactive tables
+[OCSdata](https://github.com/opencasestudies/OCSdata) | to access and download OCS data files
 
 
 The first time we use a function, we will use the `::` to indicate which package we are using. Unless we have overlapping function names, this is not necessary, but we will include it here to be informative about where the functions we will use come from.
