--- a/README.Rmd
+++ b/README.Rmd
@@ -49,7 +49,7 @@ We would also like to acknowledge the [Bloomberg American Health Initiative](htt
 
 ### Reading Metrics
 
-The total reading time for this case study was calculated with [koRpus](https://github.com/unDocUMeantIt/koRpus): **~ 85 minutes**
+The total reading time for this case study was calculated with [koRpus](https://github.com/unDocUMeantIt/koRpus): **About 85 minutes**
 
 The Flesch-Kincaid Readability Index was also calculated with [koRpus](https://github.com/unDocUMeantIt/koRpus): **Grade 8, Age 13**
 
